--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@
   --darkGrey: #202020;
 
   --primary-color-600: hsl(20, 100, 50);
-  --primary-color-500: hsl (20, 100, 60);
+  --primary-color-500: hsl(20, 100, 60);
   --primary-color-400: hsl(20, 100, 70);
   --primary-color-300: hsl(20, 100, 80);
   --primary-color-200: hsl(20, 100, 90);
@@ -90,7 +90,7 @@
   --text-kerning-h1-mobile: 10%;
   --text-kerning-h1-desktop: 2px;
 
-  --text-kerning-h2-mobile: 10%;
+  --text-kerning-h2-mobile: 1px;
   --text-kerning-h2-mobile: 10%;
 
   --text-kerning-h3-mobile: 10%;
@@ -100,12 +100,12 @@
   /* Font Line height */
 
   --text-leading-XXlarge-mobile: 56px;
-  --text-leading-Xlarge-mobile: 42px;
+  --text-leading-Xlarge-mobile: 36px;
   --text-leading-large-mobile: 28px;
   --text-leading-medium-mobile: 25px;
   --text-leading-base-mobile: 25px;
 
---text-leading-XXlarge-desktop: 75px;
+--text-leading-XXlarge-desktop: 65px;
   --text-leading-Xlarge-desktop: 50px;
   --text-leading-large-desktop: 30px;
   --text-leading-medium-desktop: 26px;
@@ -117,8 +117,12 @@
   --section-padding-mobile: 80px;
   --section-padding-desktop: 112px;
 
-  --title-padding-mobile: 32px;
+  --title-padding-mobile: 24px;
   --title-padding-desktop: 32px;
+
+  --paragraph-padding-mobile: 16px ;
+
+  --paragraph-padding-mobile: 24px ;
 
   --grid-gap-mobile: 10px;
   --grid-gap-desktop: 20px;
@@ -168,18 +172,105 @@
   padding: 0;
 }
 
-
-main {
-    margin-inline: var(--margin-mobile);
-}
-
 body{
     background-color: var(--bg-color);
 }
 
 
+/*  ------------------text styling -----------*/
+
+
+
+
+h1, h2, h3 {
+    font-family: var(--Header-font-family);
+    padding-bottom: var(--title-padding-mobile);
+}
+
+h1 {
+    font-size: var(--Text-size-XXLarge);
+    letter-spacing: var(--text-kerning-h1-desktop);
+    line-height: var(--text-leading-XXlarge-mobile);
+    font-weight: 800;
+}
+
+p {
+    font-size: var(--text-size-body);
+    letter-spacing: 1px;
+    line-height: var(--text-leading-base-mobile);
+    font-family: var(--body-font-family);
+    padding-bottom: var(--paragraph-padding-mobile);
+    
+}
+
+/* Buttons components */
+
+.cta {
+    width: 240px;
+    
+    background-color: #FF4F04;
+    border: none;
+    color: var(--white);
+    font-family: var(--body-font-family);
+    font-size: var(--text-size-button);
+    font-weight: 600;
+    border-radius: 8px;
+    position: relative; 
+    overflow: hidden;
+    transition: 300ms ease-in-out;
+   
+    padding-block: 15px;
+ 
+}
+
+.cta:hover {
+ 
+    padding-right: 30px;
+}
+
+.cta span {
+    position: absolute;
+    margin-left: 10px;
+    transform: translateX(-50%);
+    opacity: 0;
+    right: -10%;
+    transition: 400ms ease-in-out;
+}
+
+.cta:hover span{
+    opacity: 1;
+    transform: translateX(0);
+    right: 10%;
+}
+
+.cta::before{
+   content:'';
+   position:absolute;
+   left: 0;
+   top: 0;
+   width: 100%;
+   height: 100%;
+   transform: scaleX(0);
+   transition: 100ms ease-in-out transform;
+}
+
+.cta:active::before {
+    transform: scaleX(1);
+}
+
+
+button {
+    cursor: pointer;
+}
+
+
+
 /*  ------------------Navigation styling -----------*/
 
+
+header {
+    overflow: hidden;
+}
 
 nav {
   padding-inline: var(--margin-mobile);
@@ -193,6 +284,25 @@ nav {
   /* background-color: var(--bg-color); */
   top: 0;
 }
+
+.logoWrapper {
+    display: flex;
+    align-items: center;
+
+}
+
+.logoWrapper a p {
+    padding-bottom: 0;
+    color: var(--white);
+}
+
+
+
+.logo {
+        
+        font-size: var(--text-size-body);
+    }
+
 
 ul {
   list-style-type: none;
@@ -218,6 +328,12 @@ a:visited {
   margin: 5px 0;
 }
 
+  .menuKnap {
+    margin-right: var(--margin-mobile);
+  }
+
+  
+
 .openMenu {
   text-decoration: none;
   color: black;
@@ -225,15 +341,16 @@ a:visited {
   font-family: var(--Header-font-family);
   font-size: 2rem;
   font-weight: 500;
+  background-color: rgba(177, 22, 22, 0);
+  border: none;
 }
 
 .closeMenu {
   position: absolute;
-
   text-decoration: none;
   color: white;
   top: 1rem;
-  right: 3rem;
+  right: 2rem;
   font-family: "Poppins", sans-serif;
   font-size: 2rem;
   font-weight: 500;
@@ -279,9 +396,10 @@ a:visited {
   left: 0;
   width: 100%;
   height: 100vh;
-  background-color: #ff4d00;
+  background-color: #FF7033;
   transform: translateX(-100%);
 }
+
 .menu .button {
   color: white;
 }
@@ -292,43 +410,88 @@ a:visited {
 }
 
 
+/* --------HERO SECTION-------------- */
 
 
+.heroSection {
+    background-image: url(/images/bgfront.webp);
+    background-position: 52% 35%;;
+    background-attachment: fixed;
+     background-repeat: no-repeat;
+   height: 100vh;
+    width: 100%;
+    overflow: hidden;
+    position:relative;
+    margin-bottom: var(--section-padding-mobile);
+    
+}
+
+.heroSection .heroTextContainer {
+    margin-inline: var(--margin-mobile);
+    position: absolute;
+    top: 40%;
+    max-width: 55ch;
+}
+
+.heroTextContainer h1 {
+    color: var(--white);
+}
+
+
+.heroTextContainer p {
+    color: var(--white);
+}
+
+
+/* ------------Intro Section----------- */
+
+h2 {
+    line-height: var(--text-leading-Xlarge-mobile);
+    font-size: var(--Text-size-XLarge);
+}
+
+.introText {
+    margin-inline: var(--margin-mobile);
+}
 
 
 
 @media (min-width: 810px) {
-  
-    main {
-    margin-inline: var(--margin-tablet);
-}
-
- .menuKnap {
+   .menuKnap {
     display: none;
   }
 
-
 }
+
+
+
+
+
 
 
 
 
 @media (min-width: 1366px) {
-    main {
-    margin-inline: var(--margin-desktop);
-}
+  
+
+
+    .logo {
+        margin-left: var(--margin-desktop);
+    }
 
   .deskTopNav {
     display: flex;
     flex-direction: row;
     font-family: var(--Header-font-family);
     font-weight: 500;
+    margin-inline: var(--margin-desktop);
   }
 
   .deskNavLink {
     display: inline-block;
     position: relative;
     color: rgb(255, 255, 255);
+    margin-inline: 1rem;
   }
 
   .deskNavLink::after {
@@ -337,7 +500,7 @@ a:visited {
     width: 100%;
     transform: scaleX(0);
     height: 2px;
-    bottom: 0;
+    bottom: -8px;
     left: 0;
     background-color: #ef0e0e;
     transform-origin: bottom right;
@@ -353,4 +516,5 @@ a:visited {
     color: white;
   }
  
+
 }
