--- a/style.css
+++ b/style.css
@@ -176,6 +176,10 @@ body{
     background-color: var(--bg-color);
 }
 
+article {
+    margin-bottom: var(--section-padding-mobile);
+}
+
 
 /*  ------------------text styling -----------*/
 
@@ -200,6 +204,7 @@ p {
     line-height: var(--text-leading-base-mobile);
     font-family: var(--body-font-family);
     padding-bottom: var(--paragraph-padding-mobile);
+    max-width: 70ch;
     
 }
 
@@ -264,7 +269,24 @@ button {
 }
 
 
+.secondaryButton {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    border: none;
+    background-color: #ff4f0400;
+    color: #FF4F04;
+    padding-block: 15px;
+    font-size: var(--text-size-button);
+}
 
+.secondaryButton span {
+    padding-left: 10px;
+}
+
+.secondaryButton::before {
+    border-bottom: 2px solid black;
+}
 /*  ------------------Navigation styling -----------*/
 
 
@@ -293,7 +315,7 @@ nav {
 
 .logoWrapper a p {
     padding-bottom: 0;
-    color: var(--white);
+    color: var(--black);
 }
 
 
@@ -324,7 +346,7 @@ a:visited {
 .line {
   width: 30px;
   height: 3px;
-  background-color: white;
+  background-color: black;
   margin: 5px 0;
 }
 
@@ -442,6 +464,9 @@ a:visited {
     color: var(--white);
 }
 
+.heroSubtext {
+    padding-bottom: var(--paragraph-padding-mobile);
+}
 
 /* ------------Intro Section----------- */
 
@@ -453,6 +478,52 @@ h2 {
 .introText {
     margin-inline: var(--margin-mobile);
 }
+
+.introText img {
+    width: 100%;
+    height: auto;
+}
+
+
+/* ----------Produktliste frontpage-------------- */
+
+.produktListFrontPage {
+    margin-inline: var(--margin-mobile);
+}
+
+.imageStackContainer {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    gap: 8px;
+    margin-top: var(--section-padding-mobile);
+}
+
+.imageStackContainer img{
+    width: 100%;
+    height: auto;
+}
+
+.imageStackContainer .imageBottom{
+    grid-column: 1/4;
+    grid-row: 1/5;
+}
+
+.imageStackContainer .imageTop{
+ grid-column: 3/5;
+    grid-row: 3/5;
+}
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -485,6 +556,7 @@ h2 {
     font-family: var(--Header-font-family);
     font-weight: 500;
     margin-inline: var(--margin-desktop);
+    background-color: white;
   }
 
   .deskNavLink {
