--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@
   --text-leading-base-mobile: 25px;
 
 --text-leading-XXlarge-desktop: 90px;
-  --text-leading-Xlarge-desktop: 65px;
+  --text-leading-Xlarge-desktop: 45px;
   --text-leading-large-desktop: 30px;
   --text-leading-medium-desktop: 26px;
   --text-leading-base-desktop: 25px;
@@ -727,6 +727,10 @@ margin-inline: var(--margin-tablet);
 
 @media (min-width: 1366px) {
 
+.textContentContainer h2 {
+    line-height: var(--text-leading-Xlarge-desktop);
+}
+    
     .aboutFront {
         padding-block: 6rem;
     }
@@ -826,12 +830,32 @@ opacity: var(--opacity-low-emphasis);
     font-size: var(--Text-size-XLarge);
 }
 
+.testimonialFlexcontainer {
+    display: flex;
+    justify-content: center;
+    flex-wrap: nowrap;
+    column-gap: 2rem;
+    
+}
+
 }
 
 @media (min-width: 1355px) {
     .testimonialSection {
         margin-top: calc(var(--section-padding-desktop)*2);
     }
+
+    .testimonialSection h3 {
+    text-align: center;
+    max-width: 24ch;
+    padding-bottom: var(--section-padding-mobile);
+    line-height: var(--text-leading-Xlarge-desktop);
+    font-size: var(--Text-size-XLarge);
+}
+
+.byvandringSide {
+    margin-top: var(--section-padding-desktop);
+}
 }
 
 
@@ -1055,6 +1079,19 @@ grid-column: 3;
 }
 
 
+@media (min-width: 1355px) {
+
+    .byvandringHeroSection .ByvandringheroTextContainer {
+    margin-inline: var(--margin-desktop);
+    position: absolute;
+    top: 60%;
+}    
+       .ByvandringheroTextContainer h1 {
+    color: var(--white);
+    line-height: var(--text-leading-XXlarge-desktop);
+}
+}
+
 
 /* Introtekst */
 
@@ -1063,6 +1100,28 @@ grid-column: 3;
     margin-inline: var(--margin-mobile);
     margin-bottom: var(--section-padding-desktop);
 }
+
+
+@media (min-width: 810px){
+
+
+    .byvandringIntro {
+margin-inline: var(--margin-tablet);
+}
+
+} 
+
+@media (min-width: 1355px) {
+  .byvandringIntro {
+margin-inline: var(--margin-desktop);
+max-width: 75ch;
+}
+
+.byvandringIntro h2{
+    line-height: var(--text-leading-Xlarge-desktop);
+}
+}
+
 
 
 
@@ -1074,18 +1133,24 @@ grid-column: 3;
  
 }
 
+
+/* .centerFlex {
+    display: grid;
+    justify-content: center;
+} */
 .flexContainer {
       display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content:flex-start;
     align-items: center;
+
 
     
 }
 
 .flexContainer a {
 padding-bottom: var(--title-padding-mobile);
-padding-inline: var(--title-padding-mobile);
+padding-right: var(--title-padding-mobile);
 }
 
 .productCard {
@@ -1095,6 +1160,7 @@ width: 375px;
     background-repeat: no-repeat;
     background-position: 50% 90%;
     position: relative;
+    overflow: hidden;
 }
 
 .cardText {
@@ -1132,7 +1198,7 @@ width: 375px;
     font-weight: 400;
     letter-spacing: 1px;
     opacity: var(--opacity-medium-emphasis);
-    max-width: 20ch;
+    max-width: 24ch;
 }
 
 
@@ -1157,9 +1223,94 @@ width: 375px;
     background-image: url(/images/rosenborg.webp);
 }
 
+@media (min-width: 810px) {
 
-@media (min-width: 1366px) {
+.productCardSection {
+    margin-left: var(--margin-tablet);
+}
+
+}
+@media (min-width: 1355px) {
+
+.flexContainer {
+      
+ width: 90vw;
+    
+}
+
+.productCardSection {
+    margin-inline: var(--margin-desktop);
+}
+
+
+
+.cardButton {
+    position: absolute;
+    border-radius: 50%;
+    border: none;
+    width: 48px;
+    height: 48px;
+    background-color: var(--primary-color-500);
+    right: -20%;
+    bottom: 7%;
+    opacity: 0;
+    transition: 300ms ease-in-out;
+}
+
+.flexContainer a:hover .cardButton{
+right: 10%;
+    bottom: 7%;
+    opacity: 1;
+    transition: 300ms ease-in-out;
+}
 
 
 }
 
+
+
+
+.singleChristianshavnHeroSection {
+    background-image: url(/images/single.webp);
+    background-position: 23% 100%;
+    object-fit:cover;
+    background-attachment: fixed;
+     background-repeat: no-repeat;
+   height: 80vh;
+    width: 100%;
+    overflow: hidden;
+    position:relative;
+    margin-bottom: var(--section-padding-mobile);
+    
+}
+
+
+
+.singleChristianshavnHeroSection .singleChristianshavnHeroTextContainer {
+    margin-inline: var(--margin-mobile);
+    position: absolute;
+    top: 70%;
+}    
+    .singleChristianshavnHeroTextContainer h1 {
+    color: var(--white);
+    line-height: var();
+}
+
+
+@media (min-width: 1355px) {
+
+    .singleChristianshavnHeroSection .singleChristianshavnHeroTextContainer {
+    margin-inline: var(--margin-desktop);
+    position: absolute;
+    top: 60%;
+}    
+       .singleChristianshavnHeroTextContainer h1 {
+    color: var(--white);
+    line-height: var(--text-leading-XXlarge-desktop);
+}
+}
+
+
+.booktur {
+    width: 160px;
+}
