--- a/style.css
+++ b/style.css
@@ -1251,3 +1251,71 @@ footer section div li a:hover {
     grid-column: 7/13;
   }
 }
+
+.singleImageContainer {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
+  margin-inline: var(--margin-mobile);
+}
+
+.singleImageContainer img {
+  width: 100%;
+  height: auto;
+}
+
+.singleImage {
+  grid-column: 1/5;
+}
+
+.doubleImage1 {
+  grid-column: 1/3;
+}
+
+.doubleImage2 {
+  grid-column: 3/5;
+}
+
+@media (min-width: 810px) {
+  .singleImageContainer {
+    display: grid;
+    margin-inline: var(--margin-tablet);
+    grid-template-columns: repeat(8, 1fr);
+    gap: 20px;
+  }
+
+  .singleImage {
+    grid-column: 1/5;
+  }
+
+  .doubleImage1 {
+    grid-column: 5/7;
+  }
+
+  .doubleImage2 {
+    grid-column: 7/9;
+  }
+}
+
+@media (min-width: 1355px) {
+  .singleImageContainer {
+    display: grid;
+    margin-inline: var(--margin-desktop);
+    grid-template-columns: repeat(12, 1fr);
+  }
+
+  .singleImageContainer img {
+    height: 430px;
+  }
+  .singleImage {
+    grid-column: 1/7;
+  }
+
+  .doubleImage1 {
+    grid-column: 7/10;
+  }
+
+  .doubleImage2 {
+    grid-column: 10/13;
+  }
+}
