--- a/style.css
+++ b/style.css
@@ -1198,6 +1198,8 @@ footer section div li a:hover {
   font-size: var(--text-size-body-small);
 }
 
+/* oplevelse section singleproduct */
+
 .oplevelsebg {
   background-color: var(--primary-color-200);
   padding-block: var(--section-padding-mobile);
@@ -1257,6 +1259,7 @@ footer section div li a:hover {
   grid-template-columns: repeat(4, 1fr);
   gap: 10px;
   margin-inline: var(--margin-mobile);
+  padding-bottom: var(--section-padding-mobile);
 }
 
 .singleImageContainer img {
@@ -1282,6 +1285,7 @@ footer section div li a:hover {
     margin-inline: var(--margin-tablet);
     grid-template-columns: repeat(8, 1fr);
     gap: 20px;
+    padding-bottom: var(--section-padding-mobile);
   }
 
   .singleImage {
@@ -1302,6 +1306,7 @@ footer section div li a:hover {
     display: grid;
     margin-inline: var(--margin-desktop);
     grid-template-columns: repeat(12, 1fr);
+    padding-bottom: var(--section-padding-desktop);
   }
 
   .singleImageContainer img {
@@ -1317,5 +1322,51 @@ footer section div li a:hover {
 
   .doubleImage2 {
     grid-column: 10/13;
+  }
+}
+
+/* Rute section */
+.rutebeskrivelseContainer {
+  margin-inline: var(--margin-mobile);
+}
+
+.ruteTekst {
+  max-width: 65ch;
+}
+
+.rutebeskrivelseContainer iframe {
+  width: 100%;
+}
+
+@media (min-width: 810px) {
+  .rutebeskrivelseContainer {
+    margin-inline: var(--margin-tablet);
+    /* display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    gap: var(--grid-gap-desktop); */
+  }
+
+  .ruteTekst {
+  }
+
+  /* .googleMaps {
+    grid-column: 5/9;
+  }  */
+}
+
+@media (min-width: 1355px) {
+  .rutebeskrivelseContainer {
+    margin-inline: var(--margin-desktop);
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    gap: var(--grid-gap-desktop);
+  }
+  .googleMaps {
+    grid-column: 1/7;
+    grid-column: 7/13;
+  }
+  .ruteTekst {
+    grid-column: 1/7;
+    padding-top: var(--section-padding-desktop);
   }
 }
